fix the icons not centering in sidebar

--- a/app/assets/stylesheets/rooms_browse_mode.css.scss
+++ b/app/assets/stylesheets/rooms_browse_mode.css.scss
@@ -90,7 +90,7 @@ img.browse_mode_sidebar_icons{
 }
 
 .browse_mode_list li{
-  padding:12px 0;
+  padding:8px 0;
   list-style: none;
   text-align:center;
 }
@@ -130,7 +130,7 @@ img.browse_mode_sidebar_icons{
   font-size:10.5px
 }
 li.browse_mode_sidebar_icons_list{
-  padding:8px;
+  // padding:8px;
 
 }
 #browse_mode_active_default{
