test google analytis

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Listing items</h1>
 
+<a href="#" onclick="_gaq.push(['_trackEvent', 'category','action','opt_label']);"> hi event test</a>
 <h3>
   <%= link_to 'New Item', new_item_path,  class: "btn btn-primary" %>
 </h3>
