Changes Help page text

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -652,7 +652,7 @@
             </div>
             <br>
             <div>
-                A.&nbsp;&nbsp;MyWebRoom is for everyone! In particular people that like art and visuals. Our platform allows people to create their own place on the web using real products which becomes your profile in our network, so we have seen a big interest coming from Artists, Creatives, Interior Desingers and people looking for a beautiful web experience.
+                A.&nbsp;&nbsp;MyWebRoom is for everyone! People that like art and visuals are especially drawn to our platform because it allows them to create their own unique place on the web using real products to express themselves. We have seen a lot of interest coming from Artists, Interior Designers and Creative types looking for a gorgeous web experience.
             </div>
         </p>
 
