add events for google analytis

--- a/app/views/layouts/_signup.html.erb
+++ b/app/views/layouts/_signup.html.erb
@@ -29,7 +29,7 @@
       </div>
       <%= link_to_function "Term of Use", "signup_lightbox_term_of_use_show()", :id => "signup_term_of_use_link" %>
       <div class="actions">
-              <input class="blue_button" name="commit" type="submit" value="SIGN UP" onclick="_gaq.push(['_trackEvent', 'category','action','opt_label']);" >
+              <input class="blue_button" name="commit" type="submit" value="SIGN UP" onclick="_gaq.push(['_trackEvent', 'signin','regular','lightbox']);" >
       </div>
   </form>
 </div>
