--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -696,10 +696,10 @@
         <br>
         <br>
         <% if signed_in? %>
-            <%= link_to "GO TO MY ROOM", room_rooms_path(current_user.username), :id => "about-signup-button", :onclick=>"_gaq.push(['_trackEvent', 'category','action','opt_label']);"  %>
+            <%= link_to "GO TO MY ROOM", room_rooms_path(current_user.username), :id => "about-signup-button"  %>
 
         <% else %>
-            <%= link_to "GET STARTED", xroom_rooms_path, :id => "about-signup-button", :onclick=>"_gaq.push(['_trackEvent', 'category','action','opt_label']);"  %>
+            <%= link_to "GET STARTED", xroom_rooms_path, :id => "about-signup-button", :onclick=>"_gaq.push(['_trackEvent', 'static_pages','about-us','btn']);"  %>
         <% end %>
     </div>
 
