--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -21,7 +21,7 @@
         </div>
 
         <div class="actions">
-          <%= f.submit "SIGN UP", class: "blue_button", :onclick=>"_gaq.push(['_trackEvent', 'category','action','opt_label']);" %>
+          <%= f.submit "SIGN UP", class: "blue_button", :onclick=>"_gaq.push(['_trackEvent', 'signin','regular','lightbox']);" %>
         </div>
 
         <!--<a href="#" onClick="_gaq.push(['_trackEvent', 'Videos', 'Play', 'Baby\'s First Birthday']);">Play</a>-->
