Replace Sony logo with Joss and Main logo (About Us - Partners)

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -464,7 +464,7 @@
                                  <%= cl_image_tag("sfdesigncenter.png", width: 180, height: 100, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%>
                             </div>
                             <div class="span4 padding-top-small padding-bottom-small">
-                                <%= cl_image_tag("sony.png", width: 180, height: 100, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%>
+                                <%= cl_image_tag("jossandmain.png", width: 180, height: 100, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%>
                             </div>
                         </div>
                         <div class="row-fluid">
