fixes margin on contact us section of about-us page

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -593,7 +593,7 @@
                 <%= cl_image_tag("contact-us-team-myWebRoom.png", height: 420, width: 420, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%>
             </div>
             <div class="span6">
-                <div class="about-margin-right">
+                <div class="about-margin-right-small">
                     <h2 class="about-heading-white">CONTACT US</h2>
                     <div class="row-fluid">
                         <div class="span6">
