undoing zoom change

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,25 +31,23 @@ body {
 input {
     font-family: "Open Sans";
 }
-/*FB Dialogs do not play well with zoom. Comment out body zoom for now.*/
+
 @media screen and (max-height:1520px){
-    /*body{
+    body{
         zoom: 135%;
-    }*/
-
-
+    }
 }
 
 
 @media screen and (max-height:920px){
-   /* body{
+    body{
         zoom: 115%;
-    }*/
+    }
 }
 
 @media screen and (max-height:820px){
     body{
-        /*zoom: 100%;*/
+        zoom: 100%;
         /*firefox zoon break the css*/
         /*-moz-transform: scale(1);*/
         /*-moz-transform-origin: 0 0*/
@@ -63,7 +61,7 @@ input {
 
 @media screen and (max-height:720px){
     body{
-       /* zoom: 90%;*/
+        zoom: 90%;
         /*firefox zoon break the css*/
         /*-moz-transform: scale(0.5);*/
         /*-moz-transform-origin: 0 0*/
@@ -77,7 +75,7 @@ input {
 
 @media screen and (max-height:620px){
     body{
-       /* zoom: 80%;*/
+        zoom: 80%;
     }
     .shop_container{
         zoom: 100%;
@@ -86,7 +84,7 @@ input {
 }
 @media screen and (max-height:520px){
     body{
-       /* zoom: 70%;*/
+        zoom: 70%;
     }
     .shop_container{
         zoom: 100%;
