--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
  *= require bootstrap
  *= require toastr
  *= require toastr-responsive
+ *= require offline
  *= require_self
  *= require_tree .
  */
