style change for profile bookmarks and objects

--- a/app/assets/stylesheets/rooms_profile.css.scss
+++ b/app/assets/stylesheets/rooms_profile.css.scss
@@ -416,7 +416,7 @@ div.profileHome_activity.generalGrid{
 
 }
 .profile_objects_view #gridItemList,.profile_bookmarks_view #gridItemList{
-  text-align:left;
+  //text-align:left;
 }
 #profileHome_activity_header, .profileTableHeader{
   border-collapse:collapse;
