Implement new grid design for my bookmarks. Responsive auto completes the rows

--- a/app/assets/stylesheets/rooms_bookmarks.css.scss
+++ b/app/assets/stylesheets/rooms_bookmarks.css.scss
@@ -143,7 +143,7 @@ ul.bookmark_menu_list {
   width:180px;
   height:200px;
   border:1px solid #ebebeb;
-  display:table;
+  display:inline-block;
   position:relative;
   margin:4px 8px;
 
