Updates references to lightbox functions

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
       <li><%= link_to 'Blog', "http://blog.mywebroom.com" %></li>
       <li><%= link_to 'Shop',shop_index_path %> </li>
       <li><%= link_to 'Help',help_path %> </li>
-      <li><a href="javascript:feedback_lightbox();">Send Feedback!</a></li>
+      <li><a href="javascript:Mywebroom.Helpers.LightboxHelper.feedback_lightbox();">Send Feedback!</a></li>
     </ul>
 
 
