--- a/app/views/layouts/_login.html.erb
+++ b/app/views/layouts/_login.html.erb
@@ -4,12 +4,12 @@
 
   <% @static_content_x_img = StaticContent.find_by_name("x-btn-sml")  %>
   <% if @static_content_x_img.nil? or @static_content_x_img.image_name.blank?   %>
-      <%= link_to_function "X", 'javascript:login_lightbox_hide()'  %>
+      <%= link_to_function "X", 'javascript:Mywebroom.Helpers.LightboxHelper.login_lightbox_hide()'  %>
   <% else %>
       <%= link_to_function cl_image_tag(@static_content_x_img.image_name,
                                         :transformation => { :width => 150, :height => 50, :x => -90, :y => 0, :crop => :crop },
                                         :width => 40, :height => 40, :crop => :fill
-                           ), 'javascript:login_lightbox_hide()'  %>
+                           ), 'javascript:Mywebroom.Helpers.LightboxHelper.login_lightbox_hide()'  %>
   <% end %>
 
 
