--- a/app/assets/stylesheets/profile/rooms_profile.css.scss
+++ b/app/assets/stylesheets/profile/rooms_profile.css.scss
@@ -436,7 +436,7 @@ div.profileHome_activity.generalGrid{
 }
 #gridItemsTest{
   background-color: white;
-  display:table-cell;
+  // display:table-cell;
   width:620px;
   position:relative;
 }
