--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -64,7 +64,7 @@
               <a href="<%=xroom_rooms_path%>"> <span class="link_spanner"></span></a>
             </div>
             <div class="landing_play_video">
-              <a href="javascript:Mywebroom.Helpers.LightboxHelper.playVideoLightbox();" onclick="_gaq.push(['_trackEvent', 'static_pages','home','video']);"><span class="link_spanner"></span></a>
+              <a href="javascript:StaticPagesHomeLightBoxHelper.playVideoLightbox();" onclick="_gaq.push(['_trackEvent', 'static_pages','home','video']);"><span class="link_spanner"></span></a>
             </div>
           </div>
         </div>
@@ -85,7 +85,7 @@
             </div>
 
              <div class="landing_play_video">
-              <a href="javascript:Mywebroom.Helpers.LightboxHelper.playVideoLightbox();" onclick="_gaq.push(['_trackEvent', 'static_pages','home','video']);"><span class="link_spanner"></span></a>
+              <a href="javascript:StaticPagesHomeLightBoxHelper.playVideoLightbox();" onclick="_gaq.push(['_trackEvent', 'static_pages','home','video']);"><span class="link_spanner"></span></a>
             </div>
           </div>
 
@@ -106,7 +106,7 @@
               <a href="<%=xroom_rooms_path%>"> <span class="link_spanner"></span></a>
             </div>
             <div class="landing_play_video">
-              <a href="javascript:Mywebroom.Helpers.LightboxHelper.playVideoLightbox();" onclick="_gaq.push(['_trackEvent', 'static_pages','home','video']);"><span class="link_spanner"></span></a>
+              <a href="javascript:StaticPagesHomeLightBoxHelper.playVideoLightbox();" onclick="_gaq.push(['_trackEvent', 'static_pages','home','video']);"><span class="link_spanner"></span></a>
             </div>
 
 
@@ -129,7 +129,7 @@
               <a href="<%=xroom_rooms_path%>"> <span class="link_spanner"></span></a>
             </div>
              <div class="landing_play_video">
-              <a href="javascript:Mywebroom.Helpers.LightboxHelper.playVideoLightbox();" onclick="_gaq.push(['_trackEvent', 'static_pages','home','video']);"><span class="link_spanner"></span></a>
+              <a href="javascript:StaticPagesHomeLightBoxHelper.playVideoLightbox();" onclick="_gaq.push(['_trackEvent', 'static_pages','home','video']);"><span class="link_spanner"></span></a>
             </div>
           </div>
 
@@ -152,7 +152,7 @@
             </div>
 
             <div class="landing_play_video">
-              <a href="javascript:Mywebroom.Helpers.LightboxHelper.playVideoLightbox();" onclick="_gaq.push(['_trackEvent', 'static_pages','home','video']);"><span class="link_spanner"></span></a>
+              <a href="javascript:StaticPagesHomeLightBoxHelper.playVideoLightbox();" onclick="_gaq.push(['_trackEvent', 'static_pages','home','video']);"><span class="link_spanner"></span></a>
             </div>
           </div>
 
