--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -34,8 +34,9 @@
 </div>
 
 <script type="text/javascript">
-    //  remove facebook hash _=_
-    if (window.location.hash == '#_=_') window.location.hash = '';
+    //  remove facebook _=_ for firefox
+    if (window.location.hash !== '#')window.location.hash = '';
+ //if (window.location.hash == '#_=_') window.location.hash = '';
 
 </script>
 
