--- a/app/assets/stylesheets/bookmarks/bookmarks_browse_mode.css.scss
+++ b/app/assets/stylesheets/bookmarks/bookmarks_browse_mode.css.scss
@@ -267,8 +267,9 @@ li.browse_mode_sidebar_icons_list{
   padding: 0;
   margin: 0;
   left: -12070px;
+  opacity:0;
   background-color:rgba(0,0,0,.8);
-  transition: left .5s ease-in-out;
+  transition: opacity .5s ease-in-out;
 }
 .horizontal_list{
   padding-left:20px;
