--- a/app/assets/stylesheets/bookmarks/bookmarks_browse_mode.css.scss
+++ b/app/assets/stylesheets/bookmarks/bookmarks_browse_mode.css.scss
@@ -269,7 +269,7 @@ li.browse_mode_sidebar_icons_list{
   left: -12070px;
   opacity:0;
   background-color:rgba(0,0,0,.8);
-  transition: opacity .5s ease-in-out;
+  transition: opacity 1s ease-in-out;
 }
 .horizontal_list{
   padding-left:20px;
