--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -185,8 +185,9 @@ footer ul li {
     padding:0 3px;
     font-size:13px;
     font-weight:lighter;
+    font-family: "Open Sans";
+    height: 20px;
     width:45px;
-    /*height:20px;*/
 }
 /*Override Twitter Bootstrap Background Color*/
 .social_bar .navbar-inner{
@@ -197,6 +198,7 @@ footer ul li {
 }
 .social_bar{
     background-color: rgba(255,255,255,.4);
+    left: -5%;
 }
 
 /*End social bar style*/
