hover shop button

--- a/app/assets/stylesheets/rails/shop.css.scss
+++ b/app/assets/stylesheets/rails/shop.css.scss
@@ -117,7 +117,7 @@
   margin: 0px 15px;
 }
 
-.shop_upper_container a:hover {
+.shop_upper_container a.blue_button:hover {
   background-color: #00b7e5;
 }
 
