--- a/app/assets/javascripts/facebook.js.coffee.erb
+++ b/app/assets/javascripts/facebook.js.coffee.erb
@@ -36,7 +36,7 @@ window.fbAsyncInit = ->
     return  if d.getElementById(id)
     js = d.createElement(s)
     js.id = id
-    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1"
+    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=" + '<%= ENV["ROOMS_FACEBOOK_APP_ID"] %>'
     fjs.parentNode.insertBefore js, fjs
 ) document, "script", "facebook-jssdk"
 #//From Facebook- this code is for loading the SDK, so we can use FB ui and api calls
