add room start function to room view

--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -38,6 +38,15 @@
     if (window.location.hash !== '#')window.location.hash = '';
  //if (window.location.hash == '#_=_') window.location.hash = '';
 
+
+
+    // Start room SPA
+    $(document).ready(function() {
+      Mywebroom.Start();
+    });
+
+
+
 </script>
 
 
