adds comment re: erg within views

--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -39,6 +39,7 @@
  //if (window.location.hash == '#_=_') window.location.hash = '';
 
 
+  //console.log('username:' + '<%= @username %>'); <-- this works!
 
     // Start room SPA
     $(document).ready(function() {
