replaces Facebook pixel conversion code

--- a/app/views/rooms/xroom.html.erb
+++ b/app/views/rooms/xroom.html.erb
@@ -4,23 +4,24 @@
     <!-- your tags -->
     <meta name="description" content="Select a room you would like to use to start discovering the web from.">
 
-    <!-- Facebook Conversion Code for Select the room new -->
+    <!-- Facebook Conversion Code for select a room -->
     <script type="text/javascript">
-        var fb_param = {};
-        fb_param.pixel_id = '6015426701838';
-        fb_param.value = '0.00';
-        fb_param.currency = 'USD';
-        (function(){
-          var fpw = document.createElement('script');
-          fpw.async = true;
-          fpw.src = '//connect.facebook.net/en_US/fp.js';
-          var ref = document.getElementsByTagName('script')[0];
-          ref.parentNode.insertBefore(fpw, ref);
-        })();
+      var fb_param = {};
+      fb_param.pixel_id = '6015427155638';
+      fb_param.value = '0.00';
+      fb_param.currency = 'USD';
+      (function(){
+        var fpw = document.createElement('script');
+        fpw.async = true;
+        fpw.src = '//connect.facebook.net/en_US/fp.js';
+        var ref = document.getElementsByTagName('script')[0];
+        ref.parentNode.insertBefore(fpw, ref);
+      })();
     </script>
     <noscript>
-        <img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/offsite_event.php?id=6015426701838&amp;value=0&amp;currency=USD" />
+      <img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/offsite_event.php?id=6015427155638&amp;value=0&amp;currency=USD" />
     </noscript>
+
 <% end %>
 
 
