comment out console.log()

--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -39,7 +39,8 @@
  //if (window.location.hash == '#_=_') window.location.hash = '';
 
 
-  //console.log('username:' + '<%= @username %>'); <-- this works!
+  //console.log('username:' + '<%= @username %>');
+  //console.log('static contents:' + '<%= @static_contents %>');
 
 
     /*
